<resources>
    <string name="app_name">Leroy Merlin</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login_in">Login</string>
    <string name="forgetPassword">Esqueci minha senha</string>
    <string name="atendimento">Atendimento</string>
    <string name="inventario">Inventário</string>
    <string name="perda">Prev.Perda</string>
    <string name="gestao">Gestão</string>
    <string name="comercio">Comércio</string>
    <string name="logistica">Logística</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="msg">Por favor, Permita todos</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="hoje">Hoje</string>
    <string name="semana">Semana</string>
    <string name="mes">Mês</string>
    <string name="ano">Ano</string>
    <string name="filial">Filial</string>
    <string name="confirmar">Confirmar</string>
    <string name="pedido">Pedido</string>
    <string name="caixa">Caixa</string>
    <string name="data_pedido">Data Pedido</string>
    <string name="valor_parcial">Valor Parcial</string>
    <string name="valor_nf">Valor NF</string>
    <string name="data_entrega">Data Entrega</string>
    <string name="cliente">Cliente</string>
    <string name="justifique">Justifique</string>
    <string name="nota">Nota</string>
    <string name="serie">Série</string>
    <string name="descricao">Descrição</string>
    <string name="lm">LM</string>
    <string name="qtde">Quantidade</string>
    <string name="nomeUser">Nome Usuário</string>
    <string name="data">Data</string>
    <string name="margem">Margem</string>
    <string name="preco">Preço</string>
    <string name="custo">Custo</string>
    <string name="encargos">Encargos</string>
    <string name="dataNf">Data NF</string>
</resources>
