<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center_vertical"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@mipmap/leroy"
            android:layout_marginTop="20dp"
            android:id="@+id/imageView" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:textAlignment="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/colorBlack"
                    android:layout_marginLeft="10dp"
                    android:textSize="15dp"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@color/colorWhite"
                    android:layout_marginRight="10dp"
                    android:id="@+id/email"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/colorBlack"
                    android:layout_marginLeft="10dp"
                    android:textSize="15dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:background="@color/colorWhite"
                    android:layout_marginRight="10dp"
                    android:id="@+id/password"
                    />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/login_in"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:onClick="Login"
            android:id="@+id/email_sign_in_button"/>


        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textStyle="italic"-->
            <!--android:id="@+id/forgetPassword"-->
            <!--android:text="@string/forgetPassword"-->
            <!--android:layout_marginTop="5dp" />-->


    </LinearLayout>
</ScrollView>
